--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,15 +17,13 @@ header {
     background-color: black;
     // background: #FFFFFF;
     width: 100%;
-    height: 4em;
 
     nav {
         display: flex;
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
-        padding: 1.1em 0.8em;
-
+        padding: 1em;
         .ul-flex {
             display: flex;
             flex-direction: row;
@@ -49,7 +47,7 @@ header {
         }
 
         .nav-btns {
-            gap: 0.2rem;
+            gap: 0.8rem;
             display: flex;
             align-items: center;
 
@@ -67,7 +65,9 @@ header {
                 background: #4BBF73;
                 border-radius: 3.37538px;
                 color: #FFFFFF;
-                padding: 0 1.3em;
+                display: flex;
+                align-items: center;
+                padding: 1em;
                 outline: none;
                 border: none;
                 font-family: 'Hind';
@@ -82,6 +82,8 @@ header {
             .buy-btn {
                 width: 8.8em;
                 height: 2.8em;
+                display: flex;
+                align-items: center;
                 background: #6827AB;
                 border-radius: 3.37538px;
                 color: #FFFFFF;
@@ -91,13 +93,40 @@ header {
                 font-style: normal;
                 font-weight: 400;
                 font-size: 0.9em;
-                line-height: 1.4em;
+                // line-height: 1.4em;
                 text-align: center;
                 text-transform: capitalize;
-                padding: 0 1.3em;
+                padding: 1.4em;
 
             }
 
         }
     }
+}
+.testsec{
+    background-color: rgb(248, 248, 248);
+    display: flex;
+    flex-direction: column;
+    
+
+    .testdiv1{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        img{
+            padding: 6em 1.2em;
+        }
+    }
+    
+    input{
+        height: 3.5em;
+        width: 82em;
+        margin-left:6.2em ;
+    }
+
+    i, label{
+        margin-left: 6em;
+    }
+
 }
