done with the discuss page

--- a/src/app/discuss/discuss.component.html
+++ b/src/app/discuss/discuss.component.html
@@ -16,5 +16,88 @@
     </nav>
 </header>
 <div class="discuss-container">
-    
+    <div class="discuss-createpoll">
+        <div class="pollitems">
+        <h2><i class="ri-add-line"></i> Create Poll</h2>
+        <ul>
+            <li> <img src="../../assets/images/mpsc.png"> &nbsp;<span>MPSC</span> </li>
+            <li> <img src="../../assets/images/banking.png"> &nbsp;<span>UPSC</span> </li>
+            <li> <img src="../../assets/images/bhumi.png"> &nbsp;<span>Banking</span> </li>
+            <li> <img src="../../assets/images/upsc.png"> &nbsp;<span>Bhumi Abhilekh</span> </li>
+            <li> <img src="../../assets/images/mpsc1.png"> &nbsp;<span>MPSC</span> </li>
+            <li> <img src="../../assets/images/mpsc.png"> &nbsp;<span>UPSC</span> </li>
+            <li> <img src="../../assets/images/upsc.png"> &nbsp;<span>MPSC</span> </li>
+            <li> <img src="../../assets/images/banking.png"> &nbsp;<span>MPSC</span> </li>
+            <li> <img src="../../assets/images/bhumi.png"> &nbsp;<span>UPSC</span> </li>
+        </ul>
+    </div>
+    </div>
+    <div class="discuss-display">
+        <div class="inputs">
+            <div class="inputs1">
+        <img src="../../assets/images/askabout.png"><span>
+        <input type="text"  placeholder="Write Your Question here ">
+        </span>
+    </div>
+    <br>
+    <div class="discuss-review">
+                 <div class="review1">
+                 <img src="../../assets/images/askabout.png" >
+                 <div class="review2">
+                     <h2>abc@examinds.in</h2>
+                     <span><mark>MHADA</mark>&nbsp;12/09/2022</span>
+                    </div>
+             </div>
+             <br>
+             <br>
+             <p> Sudden closure of test window will cause to restart the test from the beginning.
+                 Plz provide the option of resume. It is not available.  As I solved the test 
+                 till 160th question and suddenly the window closed due to my mistake.
+                  But it was unable to resume.</p>
+                  <div class="riew-media">
+                    <div><i class="ri-thumb-up-fill"></i>&nbsp;<span>75</span></div>
+                    <div><i class="ri-question-answer-fill"></i>&nbsp; <span>30</span></div>
+                    <div><i class="ri-share-fill"></i>&nbsp;<span>24</span></div>
+                 </div>
+         </div>  
+        
+    </div>
+    </div>
+    <div class="discuss-filter">
+        <h2>Filter</h2>
+        <ul>
+            <li>
+                <input type="checkbox" id="sub1" name="sub1" value="exam1">
+                <label for="sub1">UPSC</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub3" name="sub3" value="exam3" checked>
+                <label for="sub3">Weekly Quiz</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub4" name="sub4" value="exam4">
+                <label for="sub4">UPSC PYQ</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub5" name="sub5" value="exam5">
+                <label for="sub5">Banking</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub6" name="sub6" value="exam6">
+                <label for="sub6">IIT</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub7" name="sub7" value="exam7">
+                <label for="sub7">School Toppers Scholarship Test</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub8" name="sub8" value="exam8">
+                <label for="sub8">Testing</label>
+            </li>
+            <li>
+                <input type="checkbox" id="sub9" name="sub9" value="exam9">
+                <label for="sub9">MHADA</label>
+            </li>
+        </ul>
+    </div>
 </div>
