--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,10 +5,10 @@
         </div>
         <ul class="ul-flex">
             <li> <a routerLink="/">Testboard</a> </li>
-            <li> <a href=""> Quizboard</a> </li>
-            <li> <a href="">PVQboard</a> </li>
-            <li> <a href="">Discuss</a> </li>
-            <li> <a href="">Current Affairs</a> </li>
+            <li> <a routerLink=""> Quizboard</a> </li>
+            <li> <a routerLink="">PVQboard</a> </li>
+            <li> <a routerLink="/discuss">Discuss</a> </li>
+            <li> <a routerLink="">Current Affairs</a> </li>
         </ul>
         <div class="nav-btns">
             <button class="login-btn"> <i class="ri-account-circle-line"></i>Login</button>
