--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,64 @@
 <app-nav></app-nav>
 
+<div id="home-heading-container">
+    <section class="home-sec1">
+        <div class="home-heading">
+            <h2>Ai Powered & Data </h2>
+            <h2> Driven Online Test</h2>
+            <h2>Series Platform</h2>
+        </div>
+        <div class="h-h-content">
+            <p>Stress free preparation for your exam. Accelerate </p>
+            <p> your success with <span class="purple"> Examinds. </span></p>
+        </div>
+        <div class="home-btns">
+            <div>
+                <button class="home-btn-s">
+                    <div class="button-flex">
+                        <img src="../../assets/images/google-play-removebg-preview.png" alt="">
+                        <div class="apple-content">
+                            <h4>Download on the</h4>
+                            <h2>GoogleStore</h2>
+                        </div>
+                    </div>
+                </button>
+            </div>
+            <button class="home-btn-s">
+                <div class="button-flex">
+                    <i class="ri-apple-fill"></i>
+                    <div class="apple-content">
+                        <h4>Download on the</h4>
+                        <h2>AppStore</h2>
+                    </div>
+                </div>
+            </button>
+
+        </div>
+    </section>
+
+    <section class="home-sec2">
+
+    </section>
+</div>
+
+<div id="caursol-container">
+
+    <section class="home-c-sec1">
+        <img src="../../assets/images/Slider-Img.png" alt="no-img">
+    </section>
+    <section class="home-c-sec2">
+        <div class="caursol-heading">
+            <h2>Some Heading</h2>
+        </div>
+        <div class="caursol-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+            <p> sed do eiusmod tempor incididunt ut labore et dolore</p>
+            <p> magna aliqua. Ut enim ad minim veniam</p>
+        </div>
+        <div class="caursol-btn">
+            <button>Read More<i class="ri-arrow-right-fill"></i></button>
+        </div>
+        
+    </section>
+
+</div>
