--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
             <img src="../../assets/images/Logo.png" alt="no-img">
         </div>
         <ul class="ul-flex">
-            <li> <a routerLink="/">Testboard</a> </li>
+            <li> <a href="">Testboard</a> </li>
             <li> <a href=""> Quizboard</a> </li>
             <li> <a href="">PVQboard</a> </li>
             <li> <a href="">Discuss</a> </li>
