--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
 html,
 body {
     font-family: 'Open Sans', sans-serif;
+    background: #F9F9F9;
 }
 
 // Nav Component
@@ -24,6 +25,7 @@ header {
         align-items: center;
         flex-direction: row;
         padding: 1em;
+
         .ul-flex {
             display: flex;
             flex-direction: row;
@@ -55,9 +57,9 @@ header {
                 margin: 0px 0.3em 0px 0px;
             }
 
-           .ri-shopping-cart-2-line{
-            margin: 0px 0.3em 0px 0px;
-        }
+            .ri-shopping-cart-2-line {
+                margin: 0px 0.3em 0px 0px;
+            }
 
             .login-btn {
                 width: 6.1em;
@@ -80,7 +82,7 @@ header {
             }
 
             .buy-btn {
-                width: 8.8em;
+                width: 8em;
                 height: 2.8em;
                 display: flex;
                 align-items: center;
@@ -103,30 +105,181 @@ header {
         }
     }
 }
-.testsec{
+
+.testsec {
     background-color: rgb(248, 248, 248);
     display: flex;
     flex-direction: column;
-    
 
-    .testdiv1{
+
+    .testdiv1 {
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        img{
+
+        img {
             padding: 6em 1.2em;
         }
     }
-    
-    input{
+
+    input {
         height: 3.5em;
         width: 82em;
-        margin-left:6.2em ;
+        margin-left: 6.2em;
     }
 
-    i, label{
+    i,
+    label {
         margin-left: 6em;
     }
 
+}
+
+// Home Components 
+
+#home-heading-container {
+    display: flex;
+    background: #F9F9F9;
+    box-shadow: 0px 93px 250px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 50em;
+    padding-top: 9em;
+    padding-left: 6.5em;
+
+    .home-sec1 {
+        .home-heading {
+            h2 {
+                font-style: normal;
+                font-weight: 700;
+                font-size: 3.1em;
+                line-height: 68px;
+                text-transform: capitalize;
+            }
+
+        }
+
+        .h-h-content {
+            font-family: 'Hind';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 1.2em;
+            line-height: 30px;
+            color: #0A0411;
+
+            .purple {
+                color: #6827AB;
+            }
+        }
+    }
+
+    .home-btns {
+        display: flex;
+        gap: 0.5em;
+        margin-top: 2em;
+
+        .home-btn-s {
+            width: 9em;
+            height: 2.8em;
+            background-color: #0A0411;
+            color: #ffffff;
+            cursor: pointer;
+            border-radius: 0.5em;
+
+            .button-flex {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                img {
+                    width: 1.9em;
+                    height: 2em;
+                }
+
+                .apple-content {
+                    h2 {
+                        font-size: 1em;
+                        text-align: start;
+                    }
+
+                    h4 {
+                        font-size: 0.5em;
+                        text-align: start;
+                    }
+                }
+            }
+
+
+        }
+    }
+}
+
+#caursol-container {
+    display: flex;
+    width: 77em;
+    height: 25em;
+    background: #FFFFFF;
+    box-shadow: 0px -30px 150px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    margin-left: 5em;
+    margin-top: -12em;
+
+    .home-c-sec1 {
+        img {
+            width: 100%;
+            height: 25em;
+        }
+    }
+
+    .home-c-sec2 {
+        margin-left: 3em;
+
+        .caursol-heading {
+            margin-top: 5.9em;
+
+            h2 {
+                font-style: normal;
+                font-weight: 700;
+                font-size: 2.8em;
+                line-height: 57px;
+                text-transform: capitalize;
+            }
+        }
+
+        .caursol-content {
+            margin-top: 0.9em;
+
+            p {
+                font-family: 'Hind';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 1.1em;
+                line-height: 150%;
+                text-transform: capitalize;
+                color: #565656;
+            }
+        }
+
+
+
+        .caursol-btn {
+            margin-top: 3em;
+
+            button {
+                width: 5.6em;
+                height: 2em;
+                font-family: 'Hind';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 1em;
+                line-height: 26px;
+                text-align: center;
+                text-transform: capitalize;
+                color: #1F9BCF;
+                border: none;
+                outline: none;
+                background-color: #ffffff;
+            }
+        }
+
+    }
 }
