--- a/src/app/solution/solution.component.html
+++ b/src/app/solution/solution.component.html
@@ -43,6 +43,7 @@
         </div>
 
         <div class="sol-content">
+            <button class="press-btn"><img src="/assets/images/sol-nav1.svg" alt=""></button>
 
             <div class="sol-cont-sec1">
                 <div class="sol-cont-side1">
@@ -121,10 +122,70 @@
                 <button style="background-color:#6827AB; width: 5em; color: #fff;">Next <img
                         src="/assets/images/sol-right.svg" alt="img"></button>
             </div>
-
-
-            <div class="sol-main-right">
-
-            </div>
-
         </div>
+
+
+    </div>
+
+    <div class="sol-main-right">
+
+        <div class="sol-right1">
+            <img src="/assets/images/sol-fikter.svg" alt="">
+            <div class="logo-text1">
+                All
+                <img src="/assets/images/sol-nav1.svg" alt="img">
+            </div>
+        </div>
+
+        <div class="sol-right2">
+            <div class="quest-count">
+                <button>01</button>
+                <button class="sol-cont-btn1" style="background-color: #EE1C25; color: #fff;">02</button>
+                <button>03</button>
+                <button>04</button>
+                <button>05</button>
+                <button>06</button>
+                <button>07</button>
+                <button>08</button>
+                <button>09</button>
+                <button>10</button>
+                <button>11</button>
+                <button>12</button>
+                <button>13</button>
+                <button>14</button>
+                <button>15</button>
+                <button>16</button>
+                <button>17</button>
+                <button>18</button>
+                <button>19</button>
+                <button>20</button>
+                <!--  <button>21</button>
+                <button>22</button>
+                <button>23</button>
+                <button>24</button> -->
+            </div>
+        </div>
+
+        <div class="sol-right3">
+            <form action="#">
+                <p>Submit your Feedback</p>
+                <div class="sol-fdbacks">
+                <input type="radio" id="fdback1">
+                <label>Wasnt sure of the concept</label><br>
+                <input type="radio" id="fdback2">
+                <label >Don’t know/recall formula</label><br>
+                <input type="radio" id="fdback3">
+                <label>Calculation Mistake</label><br>
+                <input type="radio" id="fdback4">
+                <label>lack of concentration</label><br>
+                <input type="radio" id="fdback5">
+                <label>lack of Knowledge</label><br>
+                <input type="radio" id="fdback6">
+                <label>Not visited due to insufficient time</label><br>
+            </div>
+            </form>
+        </div>
+
+    </div>
+
+</div>
