--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,9 +24,10 @@ header {
         align-items: center;
         flex-direction: row;
         padding: em;
+
         .ul-flex {
             display: flex;
-           /*  flex-direction: row; */
+            /*  flex-direction: row; */
             justify-content: space-between;
             gap: 2em;
 
@@ -55,9 +56,9 @@ header {
                 margin: 0px 0.3em 0px 0px;
             }
 
-           .ri-shopping-cart-2-line{
-            margin: 0px 0.3em 0px 0px;
-        }
+            .ri-shopping-cart-2-line {
+                margin: 0px 0.3em 0px 0px;
+            }
 
             .login-btn {
                 width: 6.1em;
@@ -103,50 +104,37 @@ header {
         }
     }
 }
-.testsec{
+
+.testsec {
     background-color: rgb(248, 248, 248);
     display: flex;
     flex-direction: column;
-    
 
-    .testdiv1{
+
+    .testdiv1 {
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        img{
+
+        img {
             padding: 6em 1.2em;
         }
     }
-    
-    input{
+
+    input {
         height: 3.5em;
         width: 82em;
-        margin-left:6.2em ;
+        margin-left: 6.2em;
     }
 
-    i, label{
+    i,
+    label {
         margin-left: 6em;
     }
 
 }
 
-/* ================== Solution-Navbar =================== */
-
-@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Baloo+Bhai+2&family=Exo+2:ital,wght@1,700&family=Kanit:wght@300&family=Libre+Baskerville&family=Lora&family=MuseoModerno:wght@500&family=Neuton&family=Nunito+Sans:wght@300&family=Open+Sans:wght@500&family=Source+Sans+Pro&family=Tai+Heritage+Pro&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
-//  Component
+/* =========== solution-navbar =================== */
 
 header {
     background-color: black;
@@ -244,16 +232,16 @@ header {
 
 /* ============== solution main body ============ */
 .sol-main-container {
-    width: 100%;
+    width: 78.5em;
     display: flex;
 
     .sol-main-left {
-        width: 75%;
+        width: 60em;
     }
 
-    .col-main-right {
-        width: 25%;
-        border: 2px solid #565656;
+    .sol-main-right {
+        width: 18em;
+        /*  border: 2px solid #565656; */
     }
 }
 
@@ -305,34 +293,54 @@ header {
     }
 }
 
+.sol-cont-btn1 {
+    border-radius: 1em;
+    height: 2.2em;
+    width: 2.2em;
+    border: 0.001em solid #565656;
+    background-color: white;
+}
+
 .sol-content {
     padding: 2em 2em;
+    border-right: 1px solid #E7E7E7;
+
+    .press-btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        position: absolute;
+        width: 25px;
+        height: 50px;
+        left: 71em;
+        top: 26em;
+
+        /* Main Theme/darkPrimary */
+
+        background: #0A0411;
+        border-radius: 4px;
+    }
 
     .sol-cont-sec1 {
         display: flex;
         justify-content: space-between;
+
+        .sol-cont-side1 {
+            display: flex;
+            gap: 1em;
+            align-items: center;
+            font-size: 18px;
+        }
+
+        .sol-cont-side2 {
+            display: flex;
+            gap: 0.2em;
+            font-size: 12px;
+        }
     }
 
-    .sol-cont-side1 {
-        display: flex;
-        gap: 1em;
-        align-items: center;
-        font-size: 18px;
-    }
-
-    .sol-cont-btn1 {
-        border-radius: 1em;
-        height: 2.2em;
-        width: 2.2em;
-        border: 0.001em solid #565656;
-        background-color: white;
-    }
-
-    .sol-cont-side2 {
-        display: flex;
-        gap: 0.2em;
-        font-size: 12px;
-    }
 
     .sol-cont-sec2 {
         padding: 2.5em 4em;
@@ -341,59 +349,138 @@ header {
     }
 
     .sol-cont-line2 {
-        width: 945px;
+        width: 925px;
         border: 1px solid #E7E7E7;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-}
 
-.sol-cont-sec3 {
-    padding: 2em;
-}
 
-.sol-quests{
-    margin-top: 2em;
-}
-.sol-quest1, .sol-quest2 {
-    display: flex;
-    justify-content: space-between;
-    height: 4em;
-    border-bottom: 1px solid #E7E7E7;
-    align-items: center;
-    .col-q1-side1 {
+    .sol-cont-sec3 {
+        padding: 2em;
+
+        .sol-quests {
+            margin-top: 2em;
+        }
+
+        .sol-quest1,
+        .sol-quest2 {
+            display: flex;
+            justify-content: space-between;
+            height: 4em;
+            border-bottom: 1px solid #E7E7E7;
+            align-items: center;
+
+            .col-q1-side1 {
+                display: flex;
+                gap: 0.8em;
+            }
+        }
+
+        .sol-quest3,
+        .sol-quest4 {
+            display: flex;
+            height: 4em;
+            gap: 0.8em;
+            border-bottom: 1px solid #E7E7E7;
+            align-items: center;
+        }
+
+        .col-q1-side2 button {
+            display: flex;
+            align-items: center;
+            color: white;
+            border: none;
+            width: 10em;
+            height: 2.5em;
+            border-radius: 0.4em;
+        }
+    }
+
+    .sol-cont-sec4 {
+        padding: 0 4em;
         display: flex;
-        gap:0.8em;
+        justify-content: space-between;
+    }
+
+    .sol-cont-sec4 button {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        border: none;
+        height: 2.5em;
+        border-radius: 0.4em;
+    }
+
+}
+
+.sol-right1 {
+    width: 12em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8 em;
+    margin-top: 0.3em;
+
+    /* border: 00.001em solid #565656; */
+    .logo-text1 {
+        color: #fff;
+        padding: 0 0.3em;
+        background-color: #565656;
+        width: 4em;
+        display: flex;
+        justify-content: space-between;
+        font-size: 14px;
+        gap: 0.2em;
     }
 }
-.sol-quest3, .sol-quest4{
-    display: flex;
-    height: 4em;
-    gap:0.8em;
-    border-bottom: 1px solid #E7E7E7;
-    align-items: center;
-}
-.col-q1-side2 button{
-    display: flex;
-    align-items: center;
-    color: white;
-    border: none;
-    width: 10em;
-    height: 2.5em;
-    border-radius: 0.4em;
+
+.sol-right2 {
+    width: 18.5em;
+    height: 17.5em;
+    /* border: 2px solid #565656; */
+    padding: 0 3.5em;
+    margin-top: 2em;
+
+    .quest-count {
+        margin-top: 3em;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    .quest-count>* {
+        flex: 1 1 2em;
+    }
+
+    .quest-count button {
+        height: 2.4em;
+        border: 1px solid #E7E7E7;
+        background: #F9F9F9;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .quest-count .sol-cont-btn1 {
+        border: none;
+        border-radius: 2em;
+    }
 }
 
-.sol-cont-sec4{
-    padding: 0 4em;
-    display: flex;
-    justify-content: space-between;
-}
-.sol-cont-sec4 button{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border: none;
-    height: 2.5em;
-    border-radius: 0.4em;
-}
+.sol-right3 {
+    padding: 0 1em;
 
+    p {
+        font-size: 14px;
+        font-weight: bold;
+    }
 
+    .sol-fdbacks {
+        padding: 1em;
+    }
+
+    label {
+        padding: 0 0.2em;
+        font-size: 14px;
+    }
+}
